# agi_house_agent_skills_build_day_03142026

./: .env.example  .gitignore  .mcp.json  README.md  collect_responses.py  generate_site.py  hackathon_proposal_llm_council_skill_and_benchmark.md  judge_responses.py  main.py  pyproject.toml  review_doc.py  setup.sh  test_local_llm_council_mcp.py
Documentation/: design_multi_backend_council.md  hackathon_project_llm_council_skill_and_benchmark.md  project_progress_tracker.md
Reference/: content_council.py  llm_council_method.md  workflow_server.py
configs/: all_claude.yaml  all_openai.yaml  how_to_buy_used_car.yaml  how_to_buy_used_car_v2.yaml  local_only.yaml  mixed_frontier.yaml
datasets/: ai_choreography_design_doc.llm_council_evaluation.claude.md  ai_choreography_design_doc.md  design_multi_backend_council.llm_council_evaluation.claude.md  design_multi_backend_council.md  how_to_buy_used_car.llm_council_evaluation.diverse.md  how_to_buy_used_car.md  skill_benchmark_summarize.md
llm_council/: __init__.py  config.py  council_group.py  council_member.py  test.py
llm_council_mcp/: backends.py  cli.py  council.py  orchestrator.py  server.py
scripts/: run_llama.sh  run_llm_council_mcp_locally.sh
tests/: test_backends.py  test_council.py  test_orchestrator.py
