[project]
name = "llm-council-mcp"
version = "0.1.0"
description = "A standalone MCP tool for multi-persona LLM Council evaluation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "ollama",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
