[project]
name = "llm-council-mcp"
version = "0.1.0"
description = "A standalone MCP tool for multi-persona LLM Council evaluation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "ollama",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "anthropic",
    "pytest>=8.0",
]

[project.scripts]
llm-council = "llm_council_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
